# mini-vllm-continuous-batching-lab

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PROJECT_FOR_RESUME.md  README.md  compose.yaml  debug_investigate.py  debug_logits.py  debug_logits2.py  pyproject.toml  requirements.txt
.scratch/: gen_gpu_tests.py  gen_tests.py  hf_alignment_ext_report.md  milestone_a_plan.md  milestone_b_plan.md  phase_1_5_plan.md  phase_2_plan.md  phase_3_plan.md
benchmark_results/: async_pipeline_profile.csv  async_pipeline_profile.json  comprehensive_report.md  e2e_results.json  e2e_results_reproduced.csv  e2e_results_reproduced.json  environment.json  minimal_async_profile.json  nsys_new_cli_validation.txt  nsys_trace_stats.txt  nsys_trace_stats_cuda_api_sum.txt  nsys_trace_stats_nvtx_pushpop_sum.txt  nsys_upgrade_log.txt  raw_results.json  scheduler_trace_continuous_c1_r0.jsonl  scheduler_trace_continuous_c1_r1.jsonl  scheduler_trace_continuous_c1_r2.jsonl  scheduler_trace_continuous_c2_r0.jsonl  scheduler_trace_continuous_c2_r1.jsonl  scheduler_trace_continuous_c2_r2.jsonl  scheduler_trace_continuous_c4_r0.jsonl  scheduler_trace_continuous_c4_r1.jsonl  scheduler_trace_continuous_c4_r2.jsonl  scheduler_trace_continuous_c8_r0.jsonl  scheduler_trace_continuous_c8_r1.jsonl  scheduler_trace_continuous_c8_r2.jsonl  scheduler_trace_serial_c1_r0.jsonl  scheduler_trace_serial_c1_r1.jsonl  scheduler_trace_serial_c1_r2.jsonl  scheduler_trace_serial_c2_r0.jsonl  scheduler_trace_serial_c2_r1.jsonl  scheduler_trace_serial_c2_r2.jsonl  scheduler_trace_serial_c4_r0.jsonl  (+26 more)
serving/: sse.py  (+8 more)
(+167 files in other folders)
